src/test/deca/syntax/invalid/synt/missingSemi.deca
// @expected_output deca:7:0:
{



print("bonjour")
}
